--- a/configs/lars_test_panoptic.yaml
+++ b/configs/lars_test_panoptic.yaml
@@ -21,4 +21,4 @@ SEGMENTATION:
     - [ 90,  75, 164] # Sky RGB color
 
 PROGRESS:
-  METRICS: ['PQ', 'PQ_th', 'PQ_st']
+  METRICS: ['PQ', 'PQ_th', 'PQ_st', 'aPQ_th']
