--- a/configs/v0.9.3/lars_test_semantic.yaml
+++ b/configs/v0.9.3/lars_test_semantic.yaml
@@ -2,9 +2,9 @@
 MODE: 'semantic'
 
 PATHS:
-  DATASET_ROOT: '/home/lojze/data/datasets/LaRS/split/test'
-  PREDICTIONS: '/home/lojze/data/predictions/lars/segmentation'
-  RESULTS: './results'
+  DATASET_ROOT: '/storage/datasets/marine/LaRS/v0.9.3/test'
+  PREDICTIONS: '/path/to/predictions/segmentation_v0.9.3'
+  RESULTS: './results/v0.9.3/semantic'
 
 DATASET:
   IMAGE_SUBDIR: 'images'
