--- a/configs/v1.0.0/lars_val_semantic.yaml
+++ b/configs/v1.0.0/lars_val_semantic.yaml
@@ -24,5 +24,5 @@ SEGMENTATION:
     - [ 90,  75, 164] # Sky RGB color
 
 PROGRESS:
-  METRICS: ['mIoU', 'WE_acc', 'F1']
+  METRICS: ['Q', 'mIoU', 'WE_acc', 'F1']
   
